<resources>
    <string name="app_name">CLOUDY</string>

    <!--    drawer navigation-->
    <string name="drawer_main_menu_home">홈</string>
    <string name="drawer_main_menu_school">학교 홈페이지 바로가기</string>
    <string name="drawer_board_menu_all">전교생 자유게시판</string>
    <string name="drawer_board_menu_grade">학년별 자유게시판</string>
    <string name="drawer_activity_menu_sug">학생 건의함</string>
    <string name="drawer_activity_menu_notice">학생회 공지</string>
    <string name="drawer_activity_menu_club">동아리 활동</string>
    <string name="drawer_my_menu_message">선생님과의 대화</string>
    <string name="drawer_my_menu_scrap">게시글 보관함</string>
    <string name="main_menu_notice">알림</string>
    <string name="main_menu_myinfo">마이페이지</string>
    <string name="main_menu_myinfo_report">신고 조회</string>
    <string name="main_menu_myinfo_logout">로그아웃</string>

    <string name="timetable">시간표</string>
    <string name="schoolMeal">급식표</string>
    <string name="todoList">오늘의 할 일</string>

    <string name="title"> </string>
    <string name="body"> </string>
    <string name="date"> </string>
    <string name="user">익명</string>
    <string name="count">0</string>

    <string name="edit">수정하기</string>
    <string name="delete">삭제하기</string>
    <string name="report">신고하기</string>

    <string name="user_name">이름</string>
    <string name="user_id">ID</string>
    <string name="user_student_id1">학년</string>
    <string name="user_student_id2">반</string>
    <string name="user_student_id3">번</string>

    <string name="firebase_notification_channel_id">channel</string>

    <string name="privacy">개인정보..</string>
    <string name="privacyInfo">개인 정보 제3자 제공에 동의합니다.</string>
</resources>