<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:background="@drawable/shape_post"
    android:orientation="vertical">

    <TextView
        android:id="@+id/noti_item_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/basic"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/noti_item_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginRight="14dp"
        android:layout_marginLeft="14dp"
        android:text="@string/body"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:ellipsize="end"
        android:maxLines="2" />

    <TextView
        android:id="@+id/noti_item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="14dp"
        android:layout_marginLeft="14dp"
        android:text="@string/date"
        android:textAppearance="@style/TextAppearance.Compat.Notification.Time" />
</LinearLayout>