<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="24sp"
        android:layout_height="24sp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/reply_arrow"
        app:tint="@color/no_select" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape_reply_child"
        android:padding="10dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="4dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/child_reply_item_profile"
                android:layout_width="30sp"
                android:layout_height="30sp"
                app:tint="@color/main_color"
                app:srcCompat="@drawable/profile_cloud" />

            <TextView
                android:id="@+id/child_reply_item_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:text="@string/user"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/child_reply_item_like_btn"
                android:layout_width="18sp"
                android:layout_height="18sp"
                android:layout_marginEnd="5dp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/detail_like" />

            <ImageView
                android:id="@+id/child_reply_item_report_btn"
                android:layout_width="18sp"
                android:layout_height="18sp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/reply_report" />

        </LinearLayout>

        <TextView
            android:id="@+id/child_reply_item_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/body"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="6dp" >

            <TextView
                android:id="@+id/child_reply_item_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"/>

            <ImageView
                android:id="@+id/child_reply_item_like_img"
                android:layout_width="15sp"
                android:layout_height="15sp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/detail_like" />

            <TextView
                android:id="@+id/child_reply_item_like_cnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/count" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>